--- a/config/db_config.json
+++ b/config/db_config.json
@@ -1,8 +1,8 @@
 {
   "db_engine": "mysql",
   "host": "localhost",
-  "port": 3307,
+  "port": 3306,
   "user": "root",
-  "password": "500pesos",
+  "password": "",
   "database": "InvertLearn"
 }
