--- a/modulos/usuario/config/config.json
+++ b/modulos/usuario/config/config.json
@@ -3,28 +3,18 @@
   "host": "localhost",
   "port": 3306,
   "user": "root",
-  "password": "12345678",
+  "password": "",
   "database": "InvertLearn",
 
 
-  "comentarios_service_url": "http://localhost:8000/comentarios",
-  "notificaciones_service_url": "http://localhost:8000/notificaciones",
   "usuarios_service_url": "http://localhost:8000/usuarios",
 
   "api_base": "http://localhost:8000",
-  "endpoints_comentarios": {
-    "create": "/comentarios",
-    "read_all": "/comentarios",
-    "read_one": "/comentarios/{id}",
-    "update": "/comentarios/{id}",
-    "delete": "/comentarios/{id}"
-  },
-
-  "endpoints_productos": {
-    "create": "/productos/",
-    "read_all": "/productos/",
-    "read_one": "/productos/{id}",
-    "update": "/productos/{id}",
-    "delete": "/productos/{id}"
+  "endpoints_usuarios": {
+    "create": "/usuario",
+    "read_all": "/usuario",
+    "read_one": "/usuario/{id}",
+    "update": "/usuario/{id}",
+    "delete": "/usuario/{id}"
   }
 }
